objects/Contact.object
<CustomObject>
    <fields>
        <fullName>ANI__c</fullName>
        <label>ANI</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>AccountNameForContact__c</fullName>
        <formula>Account.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>AccountNameForContact</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Department__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>A look up with Account &apos;s department</description>
        <label>Account Department</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>Please select department which are available on contact&apos;s account.</errorMessage>
            <filterItems>
                <field>Department__c.Account__c</field>
                <operation>equals</operation>
                <valueField>$Source.AccountId</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Department__c</referenceTo>
        <relationshipLabel>Contacts</relationshipLabel>
        <relationshipName>Contacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Account_Record_Type__c</fullName>
        <formula>Account.RecordType.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Record Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Title__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account Title</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>1 AND 2</booleanFilter>
            <errorMessage>Please select title which are available on contact&apos;s account.</errorMessage>
            <filterItems>
                <field>Account_Title__c.Status__c</field>
                <operation>equals</operation>
                <value>Active</value>
            </filterItems>
            <filterItems>
                <field>Account_Title__c.Account__c</field>
                <operation>equals</operation>
                <valueField>$Source.AccountId</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account_Title__c</referenceTo>
        <relationshipLabel>Contacts</relationshipLabel>
        <relationshipName>Contacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Acorn_Contact_Id__c</fullName>
        <description>Acorn Identity Value for Contact</description>
        <externalId>true</externalId>
        <label>Acorn Contact Id</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Acorn_Update_DT__c</fullName>
        <description>Date Time that Acorn last updated Contact</description>
        <label>Acorn Update DT</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Business_Rule_Association__c</fullName>
        <defaultValue>&apos;No&apos;</defaultValue>
        <description>This field is used to display the business rule association, if any business rule is associated with contact then show &quot;Yes&quot; else &quot;No&quot;.</description>
        <label>Business Rule Association</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Status__c</fullName>
        <label>Contact Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Active</fullName>
                    <default>true</default>
                    <label>Active</label>
                </value>
                <value>
                    <fullName>Inactive</fullName>
                </value>
                <value>
                    <fullName>Pending</fullName>
                    <isActive>false</isActive>
                    <label>Pending</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Corporate_Contact_Status__c</fullName>
        <defaultValue>IF($Profile.Name=&apos;Customer Account Team&apos;,&apos;Approved&apos;,&apos;-None-&apos;)</defaultValue>
        <description>This field represents the status of the contact for Corporate/Non Corporate</description>
        <label>Corporate Contact Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Pending Approval</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>None</fullName>
                </value>
                <value>
                    <fullName>Declined</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Date_Validated__c</fullName>
        <description>It stores email validation date.</description>
        <label>Date Validated</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Email_Validated__c</fullName>
        <defaultValue>false</defaultValue>
        <description>To store Email Validation.</description>
        <label>Email Validated</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Internal_User_ID__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Internal User ID</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Contacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Is_Corporate__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Contact is corporate if it is checked otherwise non corporate contact.</description>
        <label>Is Corporate</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Last_Activity_Date__c</fullName>
        <label>Last Activity Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Location__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Location Name</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.RecordTypeId</field>
                <operation>equals</operation>
                <value>Location</value>
            </filterItems>
            <filterItems>
                <field>Account.ParentId</field>
                <operation>equals</operation>
                <valueField>$Source.AccountId</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Location Contacts</relationshipLabel>
        <relationshipName>Contacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Mobile__c</fullName>
        <formula>IF( ISBLANK(MobilePhone) , &quot;&quot; ,  HYPERLINK(&quot;tel:&quot; &amp; MobilePhone, &quot;(&quot; + MID(MobilePhone , 1, 3) + &quot;)&quot; + &quot; &quot; + MID(MobilePhone , 4 , 3) + &quot;-&quot; + MID(MobilePhone , 7 , 4) , &quot;_self&quot; ))</formula>
        <label>Mobile</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>No_Of_Locations_Assoc_With_Contact__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Number of Location</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Notification_Associated_Count__c</fullName>
        <label>Notification Associated Count</label>
        <summaryForeignKey>Contact_Notification_Preference__c.Contact_Name__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Notification_Associated__c</fullName>
        <formula>IF(Notification_Associated_Count__c &gt; 0 , true , false)</formula>
        <label>Notification Associated</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Phone_Extension__c</fullName>
        <description>Field to hold the phone number extension.</description>
        <label>Phone Extension</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Preferred_Language__c</fullName>
        <label>Preferred Language</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>English</fullName>
                </value>
                <value>
                    <fullName>French (Francais)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Preferred_Method__c</fullName>
        <description>Preferred method for contact</description>
        <label>Preferred Method</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Email</fullName>
                </value>
                <value>
                    <fullName>Phone</fullName>
                    <default>true</default>
                    <label>Phone</label>
                </value>
                <value>
                    <fullName>MobilePhone</fullName>
                </value>
                <value>
                    <fullName>Fax</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Tech_Contact_Account_Title__c</fullName>
        <description>Stores Contact Account Title Name</description>
        <formula>Account_Title__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contact Account Title</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Text_Notifications_Opt_In__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Checkbox for capturing text notification opt in.</description>
        <inlineHelpText>Indicates if contact has or has not granted permission for WM to send text notifications to their mobile phone number.</inlineHelpText>
        <label>Text Notifications Opt-In</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>et4ae5__HasOptedOutOfMobile__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Mobile Opt Out</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>et4ae5__Mobile_Country_Code__c</fullName>
        <label>Mobile Country Code</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>US</fullName>
                    <default>true</default>
                    <label>US</label>
                </value>
                <value>
                    <fullName>AC</fullName>
                </value>
                <value>
                    <fullName>AD</fullName>
                </value>
                <value>
                    <fullName>AE</fullName>
                </value>
                <value>
                    <fullName>AF</fullName>
                </value>
                <value>
                    <fullName>AG</fullName>
                </value>
                <value>
                    <fullName>AI</fullName>
                </value>
                <value>
                    <fullName>AL</fullName>
                </value>
                <value>
                    <fullName>AM</fullName>
                </value>
                <value>
                    <fullName>AO</fullName>
                </value>
                <value>
                    <fullName>AQ</fullName>
                </value>
                <value>
                    <fullName>AR</fullName>
                </value>
                <value>
                    <fullName>AS</fullName>
                </value>
                <value>
                    <fullName>AT</fullName>
                </value>
                <value>
                    <fullName>AU</fullName>
                </value>
                <value>
                    <fullName>AW</fullName>
                </value>
                <value>
                    <fullName>AX</fullName>
                </value>
                <value>
                    <fullName>AZ</fullName>
                </value>
                <value>
                    <fullName>BA</fullName>
                </value>
                <value>
                    <fullName>BB</fullName>
                </value>
                <value>
                    <fullName>BD</fullName>
                </value>
                <value>
                    <fullName>BE</fullName>
                </value>
                <value>
                    <fullName>BF</fullName>
                </value>
                <value>
                    <fullName>BG</fullName>
                </value>
                <value>
                    <fullName>BH</fullName>
                </value>
                <value>
                    <fullName>BI</fullName>
                </value>
                <value>
                    <fullName>BJ</fullName>
                </value>
                <value>
                    <fullName>BL</fullName>
                </value>
                <value>
                    <fullName>BM</fullName>
                </value>
                <value>
                    <fullName>BN</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>isMerged__c</fullName>
        <defaultValue>false</defaultValue>
        <description>To verify whether the record was a part of contact merge process.</description>
        <label>isMerged</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>tz__DST_Setting__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This is a hidden field and should not be added to the page layouts.</description>
        <inlineHelpText>This is a hidden field and should not be added to the page layouts.</inlineHelpText>
        <label>DST Setting</label>
        <referenceTo>tz__DST_Setting__c</referenceTo>
        <relationshipLabel>Contacts</relationshipLabel>
        <relationshipName>Contacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>tz__Local_Time_24_Short__c</fullName>
        <description>Shows the current local time (without date) for the Contact in 24-hr format.</description>
        <formula>IF(ISBLANK(tz__UTC_Offset_F__c),
&quot;Unknown&quot;,
MID( TEXT( NOW()+ tz__UTC_Offset_F__c /24 ), 12, 2 )
&amp;&quot;:&quot;&amp;
MID( TEXT( NOW()+ tz__UTC_Offset_F__c /24 ), 15, 2 )
&amp; &quot; &quot; &amp;
IF( $Setup.tz__lt_app_settings__c.tz__Abbreviation__c, tz__Timezone_F__c,&quot;&quot;)
)</formula>
        <inlineHelpText>Shows the current local time (without date) for the Contact in 24-hr format.</inlineHelpText>
        <label>Local Time</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tz__Local_Time_24__c</fullName>
        <description>Shows the current local time for the Contact in 24-hr format.</description>
        <formula>IF(ISBLANK(tz__UTC_Offset_F__c),
&quot;Unknown&quot;,
MID( TEXT( NOW()+ tz__UTC_Offset_F__c /24 ), 6, 2 ) &amp; &quot;/&quot; &amp;
MID( TEXT( NOW()+ tz__UTC_Offset_F__c /24 ), 9, 2 ) &amp; &quot;/&quot; &amp;
LEFT( TEXT( NOW()+ tz__UTC_Offset_F__c /24 ), 4 ) &amp; &quot; &quot; &amp;
MID( TEXT( NOW()+ tz__UTC_Offset_F__c /24 ), 12, 2 )
&amp;&quot;:&quot;&amp;
MID( TEXT( NOW()+ tz__UTC_Offset_F__c /24 ), 15, 2 )
&amp; &quot; &quot; &amp;
IF( $Setup.tz__lt_app_settings__c.tz__Abbreviation__c, tz__Timezone_F__c,&quot;&quot;)
)</formula>
        <inlineHelpText>Shows the current local time for the Contact in 24-hr format.</inlineHelpText>
        <label>Local Time</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tz__Local_Time_Short__c</fullName>
        <description>Shows the current local time (without date) for the Contact.</description>
        <formula>IF(ISBLANK(tz__UTC_Offset_F__c),
&quot;Unknown&quot;,
TEXT(
IF(
OR(
VALUE( MID( TEXT( NOW()+ tz__UTC_Offset_F__c /24 ), 12, 2 ) ) = 0,
VALUE( MID( TEXT( NOW()+ tz__UTC_Offset_F__c /24 ), 12, 2 ) ) = 12
),
12,
VALUE( MID( TEXT( NOW()+ tz__UTC_Offset_F__c /24 ), 12, 2 ) )
-
IF(
VALUE( MID( TEXT( NOW()+ tz__UTC_Offset_F__c /24 ), 12, 2 ) ) &lt; 12,
0,
12
)
)
)
&amp;&quot;:&quot;&amp;
MID( TEXT( NOW()+ tz__UTC_Offset_F__c /24 ), 15, 2 )
&amp;&quot; &quot;&amp;
IF(
VALUE( MID( TEXT( NOW()+ tz__UTC_Offset_F__c /24 ), 12, 2 ) ) &lt; 12,
&quot;AM&quot;,
&quot;PM&quot;
)
&amp; &quot; &quot; &amp;
IF( $Setup.tz__lt_app_settings__c.tz__Abbreviation__c, tz__Timezone_F__c,&quot;&quot;)
)</formula>
        <inlineHelpText>Shows the current local time (without date) for the Contact.</inlineHelpText>
        <label>Local Time</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tz__Local_Time__c</fullName>
        <description>Shows the current local time for the Contact.</description>
        <formula>IF(ISBLANK(tz__UTC_Offset_F__c),
&quot;Unknown&quot;,
MID( TEXT( NOW()+ tz__UTC_Offset_F__c /24 ), 6, 2 ) &amp; &quot;/&quot; &amp;
MID( TEXT( NOW()+ tz__UTC_Offset_F__c /24 ), 9, 2 ) &amp; &quot;/&quot; &amp;
LEFT( TEXT( NOW()+ tz__UTC_Offset_F__c /24 ), 4 ) &amp; &quot; &quot; &amp;
TEXT(
IF(
OR(
VALUE( MID( TEXT( NOW()+ tz__UTC_Offset_F__c /24 ), 12, 2 ) ) = 0,
VALUE( MID( TEXT( NOW()+ tz__UTC_Offset_F__c /24 ), 12, 2 ) ) = 12
),
12,
VALUE( MID( TEXT( NOW()+ tz__UTC_Offset_F__c /24 ), 12, 2 ) )
-
IF(
VALUE( MID( TEXT( NOW()+ tz__UTC_Offset_F__c /24 ), 12, 2 ) ) &lt; 12,
0,
12
)
)
)
&amp;&quot;:&quot;&amp;
MID( TEXT( NOW()+ tz__UTC_Offset_F__c /24 ), 15, 2 )
&amp;&quot; &quot;&amp;
IF(
VALUE( MID( TEXT( NOW()+ tz__UTC_Offset_F__c /24 ), 12, 2 ) ) &lt; 12,
&quot;AM&quot;,
&quot;PM&quot;
)
&amp; &quot; &quot; &amp;
IF( $Setup.tz__lt_app_settings__c.tz__Abbreviation__c, tz__Timezone_F__c,&quot;&quot;)
)</formula>
        <inlineHelpText>Shows the current local time for the Contact.</inlineHelpText>
        <label>Local Time</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tz__Timezone_DST_Full__c</fullName>
        <description>Full timezone name when the DST is on. This is a hidden field and should not be added to the page layouts.</description>
        <inlineHelpText>Full timezone name when the DST is on. This is a hidden field and should not be added to the page layouts.</inlineHelpText>
        <label>Timezone DST (Full)</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tz__Timezone_DST__c</fullName>
        <description>Timezone abbreviation when DST is on (PDT, EDT, etc.). This is a hidden field and should not be added to the page layouts.</description>
        <inlineHelpText>Timezone abbreviation when DST is on (PDT, EDT, etc.). This is a hidden field and should not be added to the page layouts.</inlineHelpText>
        <label>Timezone DST</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tz__Timezone_F__c</fullName>
        <description>Current timezone abbreviation (PST, EST,etc..)</description>
        <formula>IF( tz__DST_Setting__r.tz__DST__c , tz__Timezone_DST__c, tz__Timezone__c )</formula>
        <inlineHelpText>Current timezone abbreviation (PST, EST,etc..)</inlineHelpText>
        <label>Timezone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tz__Timezone_Full_F__c</fullName>
        <description>Current timezone full name.</description>
        <formula>IF( tz__DST_Setting__r.tz__DST__c , tz__Timezone_DST_Full__c, tz__Timezone_Full__c )</formula>
        <inlineHelpText>Current timezone full name.</inlineHelpText>
        <label>Timezone (Full)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tz__Timezone_Full__c</fullName>
        <description>Full timezone name when the DST is off. This is a hidden field and should not be added to the page layouts.</description>
        <inlineHelpText>Full timezone name.</inlineHelpText>
        <label>Timezone Standard (Full)</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tz__Timezone_IANA__c</fullName>
        <description>Timezone as defined by Internet Assigned Numbers Authority (IANA).</description>
        <inlineHelpText>Timezone as defined by Internet Assigned Numbers Authority (IANA).</inlineHelpText>
        <label>Timezone (IANA)</label>
        <length>35</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tz__Timezone_SFDC__c</fullName>
        <description>Salesforce IANA timezone.</description>
        <inlineHelpText>Salesforce IANA timezone.</inlineHelpText>
        <label>Timezone SFDC</label>
        <length>35</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tz__Timezone__c</fullName>
        <description>Timezone abbreviation when DST is off (PST, EST, etc.). This is a hidden field and should not be added to the page layouts.</description>
        <inlineHelpText>Current timezone abbreviation (PST, EST,etc..)</inlineHelpText>
        <label>Timezone Standard</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tz__UTC_Offset_DST__c</fullName>
        <description>UTC Offset when the DST is on. This is a hidden field and should not be added to the page layouts.</description>
        <inlineHelpText>UTC Offset when the DST is on. This is a hidden field and should not be added to the page layouts.</inlineHelpText>
        <label>UTC Offset DST</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>tz__UTC_Offset_F__c</fullName>
        <description>Current UTC timezone offset.</description>
        <formula>IF( tz__DST_Setting__r.tz__DST__c , tz__UTC_Offset_DST__c , tz__UTF_Offset__c )</formula>
        <inlineHelpText>Current UTC timezone offset.</inlineHelpText>
        <label>UTC Offset</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>tz__UTF_Offset__c</fullName>
        <description>UTC Offset when the DST is off. This is a hidden field and should not be added to the page layouts.</description>
        <inlineHelpText>Shows the current UTC timezone offset of the Contact.</inlineHelpText>
        <label>UTC Offset Standard</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <listViews>
        <fullName>AllContacts</fullName>
        <columns>FULL_NAME</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.PHONE3</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>No_Of_Locations_Assoc_With_Contact__c</columns>
        <columns>Business_Rule_Association__c</columns>
        <columns>Notification_Associated__c</columns>
        <columns>Last_Activity_Date__c</columns>
        <columns>Account_Record_Type__c</columns>
        <columns>Contact_Status__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Contacts</label>
    </listViews>
    <listViews>
        <fullName>MyContacts</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Mine</filterScope>
        <label>My Contacts</label>
    </listViews>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Only_Numbers_allowed_for_Fax_field</fullName>
        <active>true</active>
        <errorConditionFormula>AND(NOT($User.Bypass_Validation__c),IF(ISBLANK(Fax), false, OR( LEN( Fax ) &lt;&gt; 10, NOT(REGEX(Fax,&quot;^[0-9]+$&quot;)))))</errorConditionFormula>
        <errorDisplayField>Fax</errorDisplayField>
        <errorMessage>Please enter 10 digit numbers only.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Only_Numbers_allowed_for_Mobile_field</fullName>
        <active>true</active>
        <errorConditionFormula>AND(NOT($User.Bypass_Validation__c),IF( ISBLANK(MobilePhone) , false, OR( LEN( MobilePhone ) &lt;&gt; 10, NOT(REGEX(MobilePhone,&quot;^[0-9]+$&quot;)))))</errorConditionFormula>
        <errorDisplayField>MobilePhone</errorDisplayField>
        <errorMessage>Please enter 10 digit numbers only.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Only_Numbers_allowed_for_Phone_field</fullName>
        <active>true</active>
        <errorConditionFormula>AND(NOT($User.Bypass_Validation__c),IF( ISBLANK(Phone) , false, OR( LEN(Phone) &lt;&gt; 10, NOT(REGEX(Phone,&quot;^[0-9]+$&quot;)))))</errorConditionFormula>
        <errorDisplayField>Phone</errorDisplayField>
        <errorMessage>Please enter 10 digit numbers only.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Prevent_Edit_For_Unspecified_Contact</fullName>
        <active>true</active>
        <description>If First name = “Unspecified”, Last name = “Account Name”, editing of any field should not be allowed.</description>
        <errorConditionFormula>AND(
AND($Profile.Name &lt;&gt; &quot;System Administrator&quot;,$Permission.Unspecified_Contact_Edit = False),
NOT(ISNEW()),
OR( LOWER(FirstName) = &quot;unspecified&quot;, LOWER(PRIORVALUE(FirstName)) = &quot;unspecified&quot;) ,
OR( LOWER(LastName) = LOWER(Account.Name) , LOWER(PRIORVALUE(LastName)) = LOWER(Account.Name),LOWER(LastName) = LOWER(PRIORVALUE( AccountNameForContact__c )) , LOWER(PRIORVALUE(LastName)) = LOWER(PRIORVALUE( AccountNameForContact__c )) )
)</errorConditionFormula>
        <errorMessage>Unspecified contact cannot be modified.</errorMessage>
    </validationRules>
</CustomObject>